# beachhead-companion

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
doc/: overview-pencil.ep
example-setup/: beachhead-companion.service
src/: common.rs  companion.rs  domain_spec.rs  lib.rs  main.rs
src/inspector/: docker.rs  mock_inspector.rs  mod.rs
src/publisher/: json_serializer.rs  mock_publisher.rs  mod.rs  redis.rs  test_redis_publisher.rs
