[package]
name = "beachhead-companion"
version = "0.1.0"
authors = ["Christian Klauser <christianklauser@outlook.com>"]
repository = "https://github.com/SealedSun/beachhead-companion"
readme = "README.md"
keywords = ["docker", "redis", "discovery", "service"]
license = "MIT"
publish = false

[lib]
name = "libbeachheadcompanion"
path = "src/lib.rs"

[[bin]]
name = "beachhead-companion"
path = "src/main.rs"

[dependencies]
# Used to parse domain specifications in container config.
regex = "^0.1.55"

# Argument parsing
docopt = "^0.6.78"

# Logging
log = "^0.3.5"
env_logger = "^0.3.2"

# Beachhead-Companion deals with time (timeouts, intervals, etc.)
chrono = "^0.2.20"

# To deserialize docopt args
rustc-serialize = "^0.3.18"

# To generate error types
quick-error = "^1.0.0"

# MPMC channel implementation, used by chan-signal
chan = "^0.1.17"

# For handling SIGTERM and SIGINT
chan-signal = "^0.1.6"

# To initialize Regex patterns
lazy_static = "0.2.1"

# Need to fix this as <0.2.3 because that bumped the url dependecy up
cookie = "=0.2.2"

# Support for service manager notifications (READY, WATCHDOG)
systemd = "0.0.9"

# Docker URL
[dependencies.url]
version = "^0.5.9"
features = [ "rustc-serialize" ]

# Redis client library (with rustc-serialize support)
[dependencies.redis]
version = "^0.7"
features = [ "with-rustc-json" ]

# Library for communicating with the docker daemon.
[dependencies.shiplift]
#version = "^0.2"
git = "https://github.com/softprops/shiplift.git"

[dev-dependencies.net2]
version = "0.2"

[dev-dependencies.wait-timeout]
version = "0.1.3"